# chela

./: CMakeLists.txt  CSharp.cmake  Chela.cmake  Chela.sln  FindLLVM.cmake  GenerateOpenAL.py  TODO  UpdateOpCodes.py  generate.sh
Bind/: CMakeLists.txt  Generator.Bind.csproj  Utilities.cs
Bind/CL/: CLGenerator.cs
Bind/ES/: ESGenerator.cs
Bind/GL2/: Generator.cs
Bind/Glu/: Generator.cs
Bind/Glx/: Generator.cs
Bind/Specifications/: chela.tm
Bind/Structures/: Delegate.cs  Enum.cs  Function.cs  Parameter.cs  Type.cs
Bind/Wgl/: Generator.cs
ChelaCompiler/: AssemblyInfo.cs  Benchmark.cs  BugException.cs  CMakeLists.txt  ChelaCompiler.cs  ChelaCompiler.csproj  CommandLineParser.cs  CompilerException.cs  Lexer.cs  Main.cs  Parser.cs  Parser.y  ReferenceEqualityComparer.cs  SimpleSet.cs  TokenPosition.cs  TokenValue.cs
ChelaCompiler/AST/: AddressOfOperation.cs  AliasDeclaration.cs  ArrayExpression.cs  AsExpression.cs  AssignmentExpression.cs  AstNode.cs  AstVisitor.cs  AttributeArgument.cs  AttributeInstance.cs  BaseExpression.cs  BinaryAssignOperation.cs  BinaryOperation.cs  BlockNode.cs  BoolConstant.cs  BreakStatement.cs  ByteConstant.cs  CStringConstant.cs  CallExpression.cs  CaseLabel.cs  CastOperation.cs  CatchStatement.cs  CharacterConstant.cs  ClassDefinition.cs  ConstantExpression.cs  ConstructorInitializer.cs  ContinueStatement.cs  DefaultExpression.cs  DelegateDefinition.cs  DeleteRawArrayStatement.cs  DeleteStatement.cs  DereferenceOperation.cs  DoWhileStatement.cs  DoubleConstant.cs  EnumConstantDefinition.cs  EnumDefinition.cs  EventAccessorDefinition.cs  EventDefinition.cs  Expression.cs  ExpressionStatement.cs  FieldDeclaration.cs  (+74 more)
ChelaCompiler/Module/: AmbiguousStructure.cs  ArgumentData.cs  ArgumentVariable.cs  ArraySlot.cs  ArrayType.cs  AttributeConstant.cs  BasicBlock.cs  BlockBuilder.cs  ChelaModule.cs  ChelaType.cs  Class.cs  ConstantType.cs  ConstantValue.cs  DebugEmitter.cs  DirectPropertySlot.cs  Dumper.cs  ElfFormat.cs  EventVariable.cs  ExceptionContext.cs  FieldInstance.cs  FieldVariable.cs  (+63 more)
ChelaCore/: AssemblyInfo.cs  CMakeLists.txt  ChelaRuntime.csproj  EntryPoint.chela  Test.chela
ChelaGui/: ActivateEvent.chela  BMPFormatProvider.chela  Button.chela  ButtonEvent.chela  CMakeLists.txt  Canvas.chela  Color.chela  Display.chela  Drawable.chela  ExposeEvent.chela  Font.chela  FontManager.chela  Frame.chela  GraphicContext.chela  GuiDriver.chela  GuiEvent.chela  GuiEventType.chela  IdleEvent.chela  Image.chela  ImageFormatProvider.chela  ImageUtil.chela  KeyCode.chela  KeyEvent.chela  MotionEvent.chela  MouseButton.chela  Palette.chela  PixelFormat.chela  Rect.chela  RenderAttribute.chela  RenderContext.chela  Screen.chela  Sizer.chela  Theme.chela  UnsupportedImageFormatException.chela  Widget.chela  Window.chela  WindowContext.chela
ChelaSysLayer/: CMakeLists.txt  ChelaSysLayer.cproj  ChelaSysLayer.md.pc
ChelaSysLayer/include/: ChelaGui.hpp  ChelaUtf8.hpp  SysLayer.hpp
ChelaSysLayer/src/: Atomic.cpp  DataConversion.cpp  GuiDriver.cpp  IO_Common.cpp  IO_Unix.cpp  IO_Win32.cpp  Math.cpp  Memory.cpp  Module.cpp  OpenGL.cpp  PThreads.cpp  PosixTime.cpp  Reflection_Common.hpp  Reflection_UnixTrap_AMD64.nasm  Reflection_UnixTrap_x86.nasm  Reflection_Unix_AMD64.cpp  Reflection_Win32Trap.nasm  Reflection_x86.cpp  SysLayer.cpp  System.cpp  Win32_Common.cpp  Win32_Threading.cpp  Win32_Time.cpp
ChelaSysLayer/src/Win32GuiDriver/: Display.cpp  Display.hpp  Drawable.cpp  Drawable.hpp  Driver.cpp  Driver.hpp  GraphicContext.cpp  GraphicContext.hpp  Screen.cpp  Screen.hpp  WglContext.cpp  WglContext.hpp  Window.cpp  Window.hpp
ChelaSysLayer/src/X11Driver/: GlxContext.cpp  GlxContext.hpp  X11Display.cpp  X11Display.hpp  X11Drawable.cpp  X11Drawable.hpp  X11Driver.cpp  X11Driver.hpp  X11GraphicContext.cpp  X11GraphicContext.hpp  X11Screen.cpp  X11Screen.hpp  X11Window.cpp  X11Window.hpp
ChelaVm/: CMakeLists.txt  ChelaVm.cproj
ChelaVm/include/ChelaVm/: ArgumentData.hpp  AttributeConstant.hpp  Class.hpp  Closure.hpp  ConstantValue.hpp  DebugInformation.hpp  ELFFormat.hpp  Field.hpp  FileSystem.hpp  Function.hpp  FunctionArgument.hpp  FunctionBlock.hpp  FunctionGroup.hpp  FunctionInstance.hpp  FunctionLocal.hpp  GenericInstance.hpp  GenericPrototype.hpp  InstructionDescription.hpp  InstructionReader.hpp  Interface.hpp  Member.hpp  MemberInstance.hpp  Module.hpp  ModuleFile.hpp  ModuleReader.hpp  Namespace.hpp  PEFormat.hpp  PlaceHolderType.hpp  Property.hpp  Structure.hpp  System.hpp  TypeGroup.hpp  TypeInstance.hpp  Types.hpp  VirtualMachine.hpp
ChelaVm/src/: ArgumentData.cpp  AttributeConstant.cpp  Class.cpp  Closure.cpp  ConstantValue.cpp  DebugInformation.cpp  ELFFormat.cpp  Field.cpp  FileSystem.cpp  Function.cpp  FunctionArgument.cpp  FunctionBlock.cpp  FunctionGroup.cpp  FunctionInstance.cpp  FunctionLocal.cpp  GenericInstance.cpp  GenericPrototype.cpp  Interface.cpp  Member.cpp  MemberInstance.cpp  Module.cpp  ModuleFile.cpp  Namespace.cpp  PEFormat.cpp  PlaceHolderType.cpp  Property.cpp  SpecialFunctions.cpp  Structure.cpp  System_Unix.cpp  System_Win32.cpp  TypeGroup.cpp  TypeInstance.cpp  Types.cpp  VirtualMachine.cpp  main.cpp
ChelaXml/: CMakeLists.txt  Formatting.chela  NameTable.chela  ReadState.chela  WhitespaceHandling.chela  WriteState.chela  XmlException.chela  XmlNameTable.chela  XmlNamespaceManager.chela  XmlNodeType.chela  XmlParserContext.chela  XmlReader.chela  XmlResolver.chela  XmlSpace.chela  XmlTextReader.chela  XmlUrlResolver.chela  XmlWriter.chela
EcmaCompat/: CMakeLists.txt  Status  System.Globalization.chela  System.Reflection.chela  System.Runtime.InteropServices.chela  System.Text.chela  System.Threading.chela  System.chela  TODO
OpenAL/: AL.chela  ALC.chela  ALCPointers.chela  ALCenum.chela  ALPointers.chela  ALenum.chela  CMakeLists.txt
OpenCL/: CMakeLists.txt
OpenGL/: CMakeLists.txt  GL.chela  GLDelegates.chela  GLEnums.chela  GLHelpers.chela
OpenGL_ES/: CMakeLists.txt  Half.chela
Samples/: CMakeLists.txt
Tests/: CMakeLists.txt
Tools/: DefinesToEnum.py  FunctionsToEntryPoints.py  OpDesc.py
(+256 files in other folders)
